syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Validate (ValidateRequest) returns (UserPayload);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc SendVerificationEmail (SendVerificationEmailRequest) returns (VerifyEmailResponse);
}

message BaseResponse {
  string status = 1;
  string msg = 2;
  bool ok = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateRequest {
  string token = 1;
}

message AuthResponse {
  BaseResponse res = 1;
  string access_token = 2;
  string userId = 3;
}

message UserPayload {
  string id = 1;
}

message VerifyEmailRequest {
  string id = 1;
  string verificationCode = 2;
}
message VerifyEmailResponse {
  BaseResponse res = 1;
}
message SendVerificationEmailRequest {
  string id = 1;
}
message SendVerificationEmailResponse {
  BaseResponse res = 1;
}
