syntax = "proto3";

package user;

service UserService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc FindOneById (FindOneByIdRequest) returns (FindResponse);
  rpc FindOneByEmail (FindOneByEmailRequest) returns (FindResponse);
}

message BaseResponse {
  string status = 1;
  string msg = 2;
  bool ok = 3;
}

message CreateRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}
message CreateResponse {
  BaseResponse res = 1;
  User user = 2;
}

message UpdateRequest {
  string id = 1;
  User user = 2;
}
message UpdateResponse {
  BaseResponse res = 1;
}

message FindOneByIdRequest {
  string id = 1;
}
message FindOneByEmailRequest {
  string email = 1;
}

message FindResponse {
  BaseResponse res = 1;
  optional User user = 2;
}

message User{
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  bool emailConfirmed = 5;
  string confirmCode = 6;
}

